--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "styled-components": "^3.1.4"
+    "styled-components": "^3.1.4",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
